--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
     "# Create 0-current_working_directory\n",
     "file_path = os.path.join(folder_path, '0-current_working_directory')\n",
     "with open(file_path, 'w') as file:\n",
-    "    file.write(\"#!/bin/bash\\npwd\")"
+    "    file.write(\"#!/bin/bash\\npwd\\n\")"
    ]
   },
   {
@@ -223,7 +223,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/bin/bash\n",
+      "pwd\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat 0x00-shell_basics/0-current_working_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -237,11 +255,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 5331aa2] commit 0-current_working_directory\n",
-      " 4 files changed, 1007 insertions(+), 2 deletions(-)\n",
-      " create mode 100644 0x00-shell_basics/0-current_working_directory\n",
-      " create mode 100644 0x00-shell_basics/README.md\n",
-      " create mode 100644 alx-system_engineering-devops.ipynb\n",
+      "[main 701f195] commit 0-current_working_directory\n",
+      " 2 files changed, 41 insertions(+), 3 deletions(-)\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -250,7 +265,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   d6f5ffb..5331aa2  main -> main\n"
+      "   5331aa2..701f195  main -> main\n"
      ]
     }
    ],
