--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -255,8 +255,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main c6d18f0] commit 0-current_working_directory\n",
-      " 2 files changed, 25 insertions(+), 10 deletions(-)\n",
+      "[main e75e867] commit 0-current_working_directory\n",
+      " 1 file changed, 4 insertions(+), 4 deletions(-)\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -265,7 +265,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   701f195..c6d18f0  main -> main\n"
+      "   c6d18f0..e75e867  main -> main\n"
      ]
     }
    ],
@@ -283,7 +283,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 1. Repo-session </h4>\n",
+    "<h4> 1. What’s in there? </h4>\n",
     "</center>\n",
     "\n",
     "---\n"
@@ -293,51 +293,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Create a new directory called <code style=\"color: red;\"> 0x03-git </code> in your <code style=\"color: red;\"> alx-zero_day </code>  repo.\n",
+    "* Display the contents list of your current directory.\n",
+    "* Example:\n",
     "\n",
-    "* Make sure you include a not empty <code style=\"color: red;\"> README.md </code>   in your directory:\n",
-    "    * At the root of your repository <code style=\"color: red;\"> alx-zero_day </code>\n",
-    "    * AND in the directory <code style=\"color: red;\"> 0x03-git </code>\n",
-    "    * And important part: Make sure your commit and push your code to Github - otherwise the Checker will always fail.\n",
+    "\n",
+    "    <code > $ ./1-listit </code>   \n",
+    "    <code > Applications    Documents   Dropbox Movies Pictures\n",
+    "    Desktop Downloads   Library Music Public\n",
+    "    </code>  \n",
     "\n",
     "* Repo:\n",
     "\n",
-    "    * GitHub repository: <code > alx-zero_day </code>"
+    "    * GitHub repository: <code > alx-system_engineering-devops </code>\n",
+    "    * Directory: <code > 0x00-shell_basics </code>\n",
+    "    * File: <code >  File: 1-listit </code>\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "A subdirectory or file 0x03-git already exists.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create a new dir calle 0x03-git in alx-zero_day using python\n",
     "import os\n",
+    "# creating 0x00-shell_basics folder\n",
     "\n",
-    "folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git'\n",
+    "folder_path = r'C:/Users/komy2\\OneDrive\\Desktop\\AlxSE\\Repos\\alx-system_engineering-devops\\0x00-shell_basics'\n",
     "if not os.path.exists(folder_path):\n",
     "    os.makedirs(folder_path)\n",
     "\n",
-    "# Create a README.md\n",
-    "file_path = os.path.join(folder_path, 'README.md')\n",
-    "\n",
+    "# Create 0-current_working_directory\n",
+    "file_path = os.path.join(folder_path, '1-listit')\n",
     "with open(file_path, 'w') as file:\n",
-    "    file.write(\"README.md using python os library\")\n",
-    "\n",
-    "\n",
-    "# Create a new dir calle 0x03-git in alx-zero_day using cmd\n",
-    "!mkdir 0x03-git \n",
-    "!echo \"README.md using echo and magic commands\" > C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/README.md\n",
-    "\n",
-    "\n"
+    "    file.write(\"#!/bin/bash\\nls\\n\")"
    ]
   },
   {
@@ -349,21 +338,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/README.md\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/README.md\n",
-    "\n",
-    "README.md using %%file "
+    "!chmod u+x C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/1-listit"
    ]
   },
   {
@@ -380,7 +359,10 @@
     }
    ],
    "source": [
-    "\n"
+    "\n",
+    "!git add .\n",
+    "!git commit -m \"commit 0-current_working_directory\"\n",
+    "!git push -u origin main"
    ]
   },
   {
