--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -347,21 +347,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'alx-system_engineering-devops.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/README.md\n"
+      "[main 464b6f0] commit 1-listit\n",
+      " 2 files changed, 32 insertions(+), 48 deletions(-)\n",
+      " create mode 100644 0x00-shell_basics/1-listit\n",
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   e75e867..464b6f0  main -> main\n"
      ]
     }
    ],
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"commit 0-current_working_directory\"\n",
+    "!git commit -m \"commit 1-listit\"\n",
     "!git push -u origin main"
    ]
   },
