--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -384,113 +384,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 2. There is no place like home </h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Write a script that changes the working directory to the user’s home directory.\n",
+    "* You are not allowed to use any shell variables\n",
+    "\n",
+    "    `julien@ubuntu:/tmp$ pwd ` \n",
+    "\n",
+    "    `/tmp`\n",
+    "\n",
+    "    `julien@ubuntu:/tmp$ echo $HOME`\n",
+    "\n",
+    "    `/home/julien`\n",
+    "\n",
+    "    `julien@ubuntu:/tmp$ source ./2-bring_me_home`\n",
+    "\n",
+    "    `julien@ubuntu:~$ pwd`\n",
+    "\n",
+    "    `/home/julien`\n",
+    "\n",
+    "    `julien@ubuntu:~$`\n",
+    "\n",
+    "\n",
+    "#### Repo:\n",
+    "* GitHub repository:   <code>alx-system_engineering-devops </code>\n",
+    "* Directory:   <code> 0x00-shell_basics </code>\n",
+    "* File:   <code> 2-bring_me_home </code>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main c315d8c] Starting to code today, so cool\n",
-      " 6 files changed, 101 insertions(+), 6 deletions(-)\n",
-      " create mode 100644 0x03-git/bash/alx\n",
-      " create mode 100644 0x03-git/bash/school\n",
-      " create mode 100644 0x03-git/c/c_is_fun.c\n",
-      " create mode 100644 0x03-git/js/index.js\n",
-      " create mode 100644 0x03-git/js/main.js\n",
-      "branch 'main' set up to track 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   73b32d7..c315d8c  main -> main\n"
+      "Overwriting C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n"
      ]
     }
    ],
    "source": [
-    "#commiting and pushing code to github\n",
-    "!git add .\n",
-    "!git commit -m \"Starting to code today, so cool\"\n",
-    "!git branch -M main\n",
-    "!git push -u origin main"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Coding fury road"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### For the moment we have an empty project directory containing only a <code> README.md </code>. It’s time to code!\n",
-    "\n",
-    "* Create these directories at the root of your project: <code> bash, c, js </code>\n",
-    "* Create these empty files:\n",
-    "    * <code> c/c_is_fun.c </code>\n",
-    "    * <code> js/main.js </code>\n",
-    "    * <code> js/index.js </code>\n",
-    "* Create a file <code> bash/alx </code>  with these two lines inside:<code> #!/bin/bash and echo \"ALX\" </code> \n",
-    "* Create a file <code> bash/school </code>  with these two lines inside: <code> #!/bin/bash and echo \"School\" </code> \n",
-    "* Add all these new files to  <code> git </code>\n",
-    "* Commit your changes <code> (message: “Starting to code today, so cool”)  </code> and push to the remote server\n",
-    "\n",
-    "#### Repo:\n",
-    "* GitHub repository:   <code>alx-zero_day </code>\n",
-    "* Directory:   <code> 0x03-git </code>\n",
-    "* File:   <code> bash/alx, bash/school, c/c_is_fun.c, js/main.js, js/index.js </code>"
+    "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n",
+    "#!/bin/bash\n",
+    "cd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create dir's (bach, c, js)\n",
-    "\n",
-    "!mkdir \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash\"  \n",
-    "!mkdir \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/c\" \n",
-    "!mkdir \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create empty files \"c/c_is_fun.c\", \"js/main.js\", \"js/index.js\"\n",
-    "\n",
-    "!touch \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/c/c_is_fun.c\"\n",
-    "!touch \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js/main.js \"\n",
-    "!touch \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js/index.js\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a file bash/alx with these two lines inside: #!/bin/bash and echo \"ALX\"\n",
-    "!echo -e '#!/bin/bash/necho \"ALX\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\" \n",
-    "#Create a file bash/school with these two lines inside: #!/bin/bash and echo \"School\"\n",
-    "!echo -e '#!/bin/bash/necho \"School\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/school\""
+    "!chmod u+x C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home"
    ]
   },
   {
@@ -524,11 +485,8 @@
     }
    ],
    "source": [
-    "# Add all these new files to git\n",
     "!git add .\n",
-    "#Commit your changes (message: “Starting to code today, so cool”) and push to the remote server\n",
-    "!git commit -m \"Starting to code today, so cool\"\n",
-    "!git branch -M main\n",
+    "!git commit -m \"commit 2-bring_me_home\"\n",
     "!git push -u origin main"
    ]
   },
