--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
    "source": [
     "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n",
     "#!/bin/bash\n",
-    "cd"
+    "cd ~"
    ]
   },
   {
@@ -456,22 +456,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'alx-system_engineering-devops.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main a76cad3] Starting to code today, so cool\n",
-      " 1 file changed, 12 insertions(+), 6 deletions(-)\n",
+      "[main 8a8eee7] commit 2-bring_me_home\n",
+      " 2 files changed, 47 insertions(+), 87 deletions(-)\n",
+      " create mode 100644 0x00-shell_basics/2-bring_me_home\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -479,8 +480,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   c315d8c..a76cad3  main -> main\n"
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   23f561b..8a8eee7  main -> main\n"
      ]
     }
    ],
@@ -494,41 +495,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Collaboration is the base of a company"
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 3.The long format </h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A branch is like a copy of your project. It’s used mainly for:\n",
+    "#### Display current directory contents in a long format\n",
     "\n",
-    "* adding a feature in development\n",
-    "* collaborating on the same project with other developers\n",
-    "* not breaking your entire repository\n",
-    "* not upsetting your co-workers\n",
-    "* The purpose of a branch is to isolate your work from the main code base of your project and/or from your co-workers’ work.\n",
+    "#### Example:\n",
     "\n",
-    "#### For this project, create a branch update_script and in this branch:\n",
+    "`$ ./3-listfiles`\n",
     "\n",
-    "* Create an empty file named bash/98\n",
-    "* Update bash/alx by replacing echo \"ALX\" with echo \"ALX School\"\n",
-    "* Update bash/school by replacing echo \"School\" with echo \"The school is open!\"\n",
-    "* Add and commit these changes (message: “My personal work”)\n",
-    "* Push this new branch Tips\n",
+    "`total 32`\n",
     "\n",
-    "#### Add quick fix in your project and it needs to be deployed now:\n",
+    "`-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:19 0-current_working_directory`\n",
     "\n",
-    "* Change branch to main\n",
-    "* Update the file bash/alx by replacing echo \"ALX\" with echo \"ALX School is so cool!\"\n",
-    "* Delete the directory js\n",
-    "* Commit your changes (message: “Hot fix”) and push to the origin\n",
+    "`-rwxr-xr-x@ 1 sylvain staff 19 Jan 25 00:23 1-listit`\n",
+    "\n",
+    "`-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:29 2-bring_me_home`\n",
+    "\n",
+    "`-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:39 3-listfiles`\n",
+    "\n",
+    "`$`\n",
     "\n",
     "\n",
     "#### Repo:\n",
-    "* GitHub repository: alx-zero_day\n",
-    "* Directory: 0x03-git\n",
-    "* File: bash/alx, bash/school, bash/98"
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `3-listfiles`"
    ]
   },
   {
@@ -588,27 +590,7 @@
      ]
     }
    ],
-   "source": [
-    "#create a branch update_script and in this branch:\n",
-    "!git branch update_script\n",
-    "!git checkout update_script\n",
-    "\n",
-    "#Create an empty file named bash/98\n",
-    "!touch \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/98\"\n",
-    "\n",
-    "#Update bash/alx by replacing echo \"ALX\" with echo \"ALX School\"\n",
-    "!echo -e '!#/bin/bash/necho \"ALX School\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\"\n",
-    "\n",
-    "#Update bash/school by replacing echo \"School\" with echo \"The school is open!\"\n",
-    "!echo -e '!#/bin/bash/necho \"The school is open!\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/school\"\n",
-    "\n",
-    "#Add and commit these changes (message: “My personal work”)\n",
-    "!git add .\n",
-    "!git commit -m \"My personal work\"\n",
-    "!git push -u origin update_script\n",
-    "!git push --set-upstream origin update_script\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
