--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
    "source": [
     "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n",
     "#!/bin/bash\n",
-    "cd ~"
+    "cd ~\\n"
    ]
   },
   {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -470,9 +470,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 8a8eee7] commit 2-bring_me_home\n",
-      " 2 files changed, 47 insertions(+), 87 deletions(-)\n",
-      " create mode 100644 0x00-shell_basics/2-bring_me_home\n",
+      "[main 14fe9fb] commit 2-bring_me_home\n",
+      " 2 files changed, 33 insertions(+), 51 deletions(-)\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -481,7 +480,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   23f561b..8a8eee7  main -> main\n"
+      "   8a8eee7..14fe9fb  main -> main\n"
      ]
     }
    ],
@@ -535,62 +534,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M\talx-zero_day.ipynb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Switched to branch 'update_script'\n",
-      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[update_script 35cf8fd] My personal work\n",
-      " 4 files changed, 107 insertions(+), 4 deletions(-)\n",
-      " create mode 100644 0x03-git/bash/98\n",
-      "branch 'update_script' set up to track 'origin/update_script'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "remote: \n",
-      "remote: Create a pull request for 'update_script' on GitHub by visiting:        \n",
-      "remote:      https://github.com/elkomysara/alx-zero_day/pull/new/update_script        \n",
-      "remote: \n",
-      "To https://github.com/elkomysara/alx-zero_day.git\n",
-      " * [new branch]      update_script -> update_script\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "branch 'update_script' set up to track 'origin/update_script'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Everything up-to-date\n"
+      "Writing C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/3-listfiles\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/3-listfiles\n",
+    "#!/bin/bash\n",
+    "cd ~\\n"
+   ]
   },
   {
    "cell_type": "code",
