--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
    "source": [
     "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home\n",
     "#!/bin/bash\n",
-    "cd ~\\n"
+    "cd ~"
    ]
   },
   {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -470,8 +470,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 14fe9fb] commit 2-bring_me_home\n",
-      " 2 files changed, 33 insertions(+), 51 deletions(-)\n",
+      "[main 007fd53] commit 2-bring_me_home\n",
+      " 3 files changed, 16 insertions(+), 55 deletions(-)\n",
+      " create mode 100644 0x00-shell_basics/3-listfiles\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -480,7 +481,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   8a8eee7..14fe9fb  main -> main\n"
+      "   14fe9fb..007fd53  main -> main\n"
      ]
     }
    ],
