--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -330,13 +330,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -354,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -368,9 +361,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 464b6f0] commit 1-listit\n",
-      " 2 files changed, 32 insertions(+), 48 deletions(-)\n",
-      " create mode 100644 0x00-shell_basics/1-listit\n",
+      "[main 28ffc27] commit 1-listit\n",
+      " 3 files changed, 17 insertions(+), 10 deletions(-)\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -379,7 +371,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   e75e867..464b6f0  main -> main\n"
+      "   7a23d95..28ffc27  main -> main\n"
      ]
     }
    ],
@@ -541,76 +533,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/3-listfiles\n"
+      "Overwriting C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/3-listfiles\n"
      ]
     }
    ],
    "source": [
     "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/3-listfiles\n",
     "#!/bin/bash\n",
-    "cd ~\\n"
+    "ls -l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\talx-zero_day.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n",
-      "rm: C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js: No such file or directory\n",
-      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[update_script d359f72] Hot fix\n",
-      " 1 file changed, 7 insertions(+), 7 deletions(-)\n",
-      "branch 'main' set up to track 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   a76cad3..d359f72  main -> main\n",
-      "warning: branch.main.remote has multiple values\n",
-      "warning: branch.main.merge has multiple values\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Now that the changes are isolated correctly from the main branch\n",
-    "\n",
-    "#Create a quick fix in your project and it needs to be deployed now:\n",
-    "#Change branch to main\n",
-    "!git switch main\n",
-    "\n",
-    "#Update the file bash/alx by replacing echo \"ALX\" with echo \"ALX School is so cool!\"\n",
-    "!echo -e '!#/bin/bash/necho \"ALX School is so cool!\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\"\n",
-    "\n",
-    "#Delete the directory js\n",
-    "!rm -r \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js/\"\n",
-    "#Commit your changes (message: “Hot fix”) and push to the origin\n",
+    "!chmod u+x C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/3-listfiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!git add .\n",
-    "!git commit -m \"Hot fix\"\n",
-    "!git branch -M main\n",
+    "!git commit -m \"commit 3-listfiles\"\n",
     "!git push -u origin main"
    ]
   },
