committing the 4-listmorefiles

--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -16,6 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###\n",
     "---\n",
     "<center>\n",
     "<h1>  0x00. Shell  </h1>\n",
@@ -141,6 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###\n",
     "---\n",
     "<center>\n",
     "<h4> 0. Where am I? </h4>\n",
@@ -196,7 +198,7 @@
     "import os\n",
     "# creating 0x00-shell_basics folder\n",
     "\n",
-    "folder_path = r'C:/Users/komy2\\OneDrive\\Desktop\\AlxSE\\Repos\\alx-system_engineering-devops\\0x00-shell_basics'\n",
+    "folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics'\n",
     "if not os.path.exists(folder_path):\n",
     "    os.makedirs(folder_path)\n",
     "\n",
@@ -209,7 +211,7 @@
     "# Create 0-current_working_directory\n",
     "file_path = os.path.join(folder_path, '0-current_working_directory')\n",
     "with open(file_path, 'w') as file:\n",
-    "    file.write(\"#!/bin/bash\\npwd\\n\")"
+    "    file.write(\"#!/bin/bash/npwd/n\")"
    ]
   },
   {
@@ -280,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "###\n",
     "---\n",
     "<center>\n",
     "<h4> 1. What’s in there? </h4>\n",
@@ -319,14 +321,14 @@
     "import os\n",
     "# creating 0x00-shell_basics folder\n",
     "\n",
-    "folder_path = r'C:/Users/komy2\\OneDrive\\Desktop\\AlxSE\\Repos\\alx-system_engineering-devops\\0x00-shell_basics'\n",
+    "folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics'\n",
     "if not os.path.exists(folder_path):\n",
     "    os.makedirs(folder_path)\n",
     "\n",
     "# Create 0-current_working_directory\n",
     "file_path = os.path.join(folder_path, '1-listit')\n",
     "with open(file_path, 'w') as file:\n",
-    "    file.write(\"#!/bin/bash\\nls\\n\")"
+    "    file.write(\"#!/bin/bash/nls/n\")"
    ]
   },
   {
@@ -386,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "###\n",
     "---\n",
     "<center>\n",
     "<h4> 2. There is no place like home </h4>\n",
@@ -493,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "###\n",
     "---\n",
     "<center>\n",
     "<h4> 3.The long format </h4>\n",
@@ -561,9 +563,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'alx-system_engineering-devops.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 2ffca2e] commit 3-listfiles\n",
+      " 2 files changed, 20 insertions(+), 64 deletions(-)\n",
+      "branch 'main' set up to track 'origin/main'."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   28ffc27..2ffca2e  main -> main\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "!git add .\n",
     "!git commit -m \"commit 3-listfiles\"\n",
@@ -574,91 +608,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Collaboration: be up to date"
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 4. Hidden files </h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Work on the same branch as your co-workers and it’s best if you keep up to date with their changes.\n",
+    "#### Display current directory contents, including hidden files (starting with `.`). Use the long format.\n",
     "\n",
-    "* update your file README.md in the main branch \n",
+    "Example:\n",
     "\n",
-    "#### After that:\n",
+    "```  $ ./4-listmorefiles```\n",
     "\n",
-    "* Get all changes of the main branch locally (i.e. your README.md file will be updated)\n",
-    "* Create a new file up_to_date at the root of your directory and in it, write the git command line used\n",
-    "* Add up_to_date to git, commit (message: “How to be up to date in git”), and push to the origin\n",
+    "`    total 32`\n",
+    "\n",
+    "`    drwxr-xr-x@ 6 sylvain staff 204 Jan 25 00:29 .`\n",
+    "\n",
+    "`    drwxr-xr-x@ 43 sylvain staff 1462 Jan 25 00:19 ..`\n",
+    "\n",
+    "`    -rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:19 0-current_working_directory`\n",
+    "\n",
+    "`    -rwxr-xr-x@ 1 sylvain staff 19 Jan 25 00:23 1-listit`\n",
+    "\n",
+    "`    -rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:29 2-bring_me_home`\n",
+    "\n",
+    "`    -rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:39 3-listfiles`\n",
+    "\n",
+    "`    -rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:41 4-listmorefiles`\n",
+    "`    $ `\n",
+    "\n",
     "\n",
     "#### Repo:\n",
-    "* GitHub repository: alx-zero_day\n",
-    "* Directory: 0x03-git\n",
-    "* File: README.md, up_to_date"
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `4-listmorefiles`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already up to date.\n"
+      "Writing C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles\n"
      ]
     }
    ],
    "source": [
-    "# update your file README.md in the main branch \n",
-    "# (github website)\n",
-    "!rm -r \n",
-    "#Get all changes of the main branch locally (i.e. your README.md file will be updated)\n",
-    "!git pull\n",
-    "#Create a new file up_to_date at the root of your directory and in it, write the git command line used\n",
-    "!echo 'git pull' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/up_to_date\""
+    "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles\n",
+    "#!/bin/bash\n",
+    "ls -la"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main 493c27a] How to be up to date in git\n",
-      " 3 files changed, 22 insertions(+), 21 deletions(-)\n",
-      " create mode 100644 0x03-git/up_to_date\n",
-      " delete mode 100644 up_to_date\n",
-      "branch 'main' set up to track 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   dbb8fdf..493c27a  main -> main\n",
-      "warning: branch.main.remote has multiple values\n",
-      "warning: branch.main.merge has multiple values\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Add up_to_date to git, commit (message: “How to be up to date in git”), and push to the origin\n",
+    "!chmod u+x C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!git add .\n",
-    "!git commit -m \"How to be up to date in git\"\n",
-    "!git branch -M main\n",
+    "!git commit -m \"committing the 4-listmorefiles\"\n",
     "!git push -u origin main"
    ]
   },
@@ -809,7 +839,7 @@
     "import os\n",
     "# creating alx-zero_day folder\n",
     "\n",
-    "folder_path = r'C:/Users/komy2\\OneDrive\\Desktop\\AlxSE\\Repos\\alx-system_engineering-devops'\n",
+    "folder_path = r'C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops'\n",
     "if not os.path.exists(folder_path):\n",
     "    os.makedirs(folder_path)\n",
     "\n",
