--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -27,98 +27,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\komy2\\OneDrive\\Desktop\\AlxSE\\Repos\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fatal: destination path 'alx-system_engineering-devops' already exists and is not an empty directory.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd c:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/ \n",
-    "!git clone git@github.com:elkomysara/alx-system_engineering-devops.git\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reinitialized existing Git repository in C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-system_engineering-devops/.git/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'README.md', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main d6f5ffb] first commit\n",
-      " 1 file changed, 1 insertion(+)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: remote origin already exists.\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "'/home/elkomy/alx-system_engineering-devops'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "branch 'main' set up to track 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
+      "[main c0bb1d5] first commit\n",
+      " 1 file changed, 3 insertions(+)\n",
+      "fatal: remote origin already exists.\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   cef742c..d6f5ffb  main -> main\n",
-      "error: remote origin already exists.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "branch 'main' set up to track 'origin/main'."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Everything up-to-date\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      " \u001b[31m! [rejected]       \u001b[m main -> main (non-fast-forward)\n",
+      "\u001b[31merror: failed to push some refs to 'https://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@github.com/elkomysara/alx-system_engineering-devops.git'\n",
+      "\u001b[m\u001b[33mhint: Updates were rejected because the tip of your current branch is behind\u001b[m\n",
+      "\u001b[33mhint: its remote counterpart. Integrate the remote changes (e.g.\u001b[m\n",
+      "\u001b[33mhint: 'git pull ...') before pushing again.\u001b[m\n",
+      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n",
+      "fatal: remote origin already exists.\n",
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      " \u001b[31m! [rejected]       \u001b[m main -> main (non-fast-forward)\n",
+      "\u001b[31merror: failed to push some refs to 'https://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@github.com/elkomysara/alx-system_engineering-devops.git'\n",
+      "\u001b[m\u001b[33mhint: Updates were rejected because the tip of your current branch is behind\u001b[m\n",
+      "\u001b[33mhint: its remote counterpart. Integrate the remote changes (e.g.\u001b[m\n",
+      "\u001b[33mhint: 'git pull ...') before pushing again.\u001b[m\n",
+      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n"
      ]
     }
    ],
@@ -136,6 +90,59 @@
     "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
     "!git branch -M main\n",
     "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git config --global user.email \"sa1244@fayoum.edu.eg\" && git config --global user.name \"elkomysara\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updating 1a1b9b9..594646a\n",
+      "error: Your local changes to the following files would be overwritten by merge:\n",
+      "\tREADME.md\n",
+      "Please commit your changes or stash them before you merge.\n",
+      "Aborting\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git pull"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      " \u001b[31m! [rejected]       \u001b[m main -> main (non-fast-forward)\n",
+      "\u001b[31merror: failed to push some refs to 'https://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@github.com/elkomysara/alx-system_engineering-devops.git'\n",
+      "\u001b[m\u001b[33mhint: Updates were rejected because the tip of your current branch is behind\u001b[m\n",
+      "\u001b[33mhint: its remote counterpart. Integrate the remote changes (e.g.\u001b[m\n",
+      "\u001b[33mhint: 'git pull ...') before pushing again.\u001b[m\n",
+      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
    ]
   },
   {
