--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -55,41 +55,33 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "[main c0bb1d5] first commit\n",
-      " 1 file changed, 3 insertions(+)\n",
-      "fatal: remote origin already exists.\n",
-      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      " \u001b[31m! [rejected]       \u001b[m main -> main (non-fast-forward)\n",
-      "\u001b[31merror: failed to push some refs to 'https://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@github.com/elkomysara/alx-system_engineering-devops.git'\n",
-      "\u001b[m\u001b[33mhint: Updates were rejected because the tip of your current branch is behind\u001b[m\n",
-      "\u001b[33mhint: its remote counterpart. Integrate the remote changes (e.g.\u001b[m\n",
-      "\u001b[33mhint: 'git pull ...') before pushing again.\u001b[m\n",
-      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n",
-      "fatal: remote origin already exists.\n",
-      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      " \u001b[31m! [rejected]       \u001b[m main -> main (non-fast-forward)\n",
-      "\u001b[31merror: failed to push some refs to 'https://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@github.com/elkomysara/alx-system_engineering-devops.git'\n",
-      "\u001b[m\u001b[33mhint: Updates were rejected because the tip of your current branch is behind\u001b[m\n",
-      "\u001b[33mhint: its remote counterpart. Integrate the remote changes (e.g.\u001b[m\n",
-      "\u001b[33mhint: 'git pull ...') before pushing again.\u001b[m\n",
-      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n"
+      "On branch main\n",
+      "Your branch is ahead of 'origin/main' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\t\u001b[31mmodified:   alx-system_engineering-devops.ipynb\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
     }
    ],
    "source": [
     "\n",
     "#create a new repository on the command line\n",
-    "!echo \"# alx-system_engineering-devops\" >> README.md\n",
+    "!echo \"# alx-system_engineering-devops\" > README.md\n",
     "!git init\n",
     "!git add README.md\n",
     "!git commit -m \"first commit\"\n",
     "!git branch -M main\n",
-    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
-    "!git push -u origin main\n",
-    "#push an existing repository from the command line\n",
-    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
-    "!git branch -M main\n",
-    "!git push -u origin main"
+    "# !git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
+    "# !git push -u origin main\n",
+    "# #push an existing repository from the command line\n",
+    "# !git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
+    "# !git branch -M main\n",
+    "# !git push -u origin main"
    ]
   },
   {
