--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -55,16 +55,8 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 1 commit.\n",
-      "  (use \"git push\" to publish your local commits)\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\t\u001b[31mmodified:   alx-system_engineering-devops.ipynb\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "[main 5b1052d] first commit\n",
+      " 1 file changed, 18 insertions(+), 26 deletions(-)\n"
      ]
     }
    ],
@@ -73,7 +65,7 @@
     "#create a new repository on the command line\n",
     "!echo \"# alx-system_engineering-devops\" > README.md\n",
     "!git init\n",
-    "!git add README.md\n",
+    "!git add .\n",
     "!git commit -m \"first commit\"\n",
     "!git branch -M main\n",
     "# !git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
