--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -55,8 +55,9 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "[main 5b1052d] first commit\n",
-      " 1 file changed, 18 insertions(+), 26 deletions(-)\n"
+      "[main eff0084] first commit\n",
+      " 1 file changed, 4 insertions(+), 12 deletions(-)\n",
+      "fatal: remote origin already exists.\n"
      ]
     }
    ],
@@ -68,7 +69,7 @@
     "!git add .\n",
     "!git commit -m \"first commit\"\n",
     "!git branch -M main\n",
-    "# !git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
+    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
     "# !git push -u origin main\n",
     "# #push an existing repository from the command line\n",
     "# !git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
