--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -55,9 +55,19 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "[main eff0084] first commit\n",
-      " 1 file changed, 4 insertions(+), 12 deletions(-)\n",
-      "fatal: remote origin already exists.\n"
+      "[main 4955c28] first commit\n",
+      " 1 file changed, 5 insertions(+), 4 deletions(-)\n",
+      "fatal: remote origin already exists.\n",
+      "Enumerating objects: 15, done.\n",
+      "Counting objects: 100% (15/15), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (11/11), done.\n",
+      "Writing objects: 100% (12/12), 1.48 KiB | 1.48 MiB/s, done.\n",
+      "Total 12 (delta 7), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (7/7), completed with 2 local objects.\u001b[K\n",
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   3bef5ce..4955c28  main -> main\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
    ],
@@ -70,9 +80,9 @@
     "!git commit -m \"first commit\"\n",
     "!git branch -M main\n",
     "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
-    "# !git push -u origin main\n",
+    "!git push -u origin main\n",
     "# #push an existing repository from the command line\n",
-    "# !git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
+    "!git remote add origin git@github.com:elkomysara/alx-system_engineering-devops.git\n",
     "# !git branch -M main\n",
     "# !git push -u origin main"
    ]
