--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -55,19 +55,20 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in /home/elkomy/alx-system_engineering-devops/.git/\n",
-      "[main 4955c28] first commit\n",
-      " 1 file changed, 5 insertions(+), 4 deletions(-)\n",
+      "[main c03efcb] first commit\n",
+      " 1 file changed, 16 insertions(+), 6 deletions(-)\n",
       "fatal: remote origin already exists.\n",
-      "Enumerating objects: 15, done.\n",
-      "Counting objects: 100% (15/15), done.\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (11/11), done.\n",
-      "Writing objects: 100% (12/12), 1.48 KiB | 1.48 MiB/s, done.\n",
-      "Total 12 (delta 7), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (7/7), completed with 2 local objects.\u001b[K\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 635 bytes | 635.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   3bef5ce..4955c28  main -> main\n",
-      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
+      "   4955c28..c03efcb  main -> main\n",
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n",
+      "fatal: remote origin already exists.\n"
      ]
     }
    ],
